# agentic-swe-system

./: .env.example  .gitignore  README.md  benchmark_report.md  decisions.md  improvement_log.md  pyproject.toml  retrieval_test.md  schema.md
.github/workflows/: lint.yml
sop/: v1.0.yaml  v1.1.yaml
src/: __init__.py
src/agents/: __init__.py  common.py  developer.py  product_analyst.py  qa.py  reviewer.py  tech_lead.py
src/benchmarking/: __init__.py  db.py  instrumentation.py  pareto.py  schema.sql  tasks.json
src/executor/: __init__.py  git_executor.py
src/graph/: __init__.py  __main__.py  inner_loop.py  state.py
src/improvement/: __init__.py  architect.py  diagnostic.py  loop.py
src/rag/: __init__.py  call_graph.py  chunker.py  indexer.py  retriever.py
src/sop/: __init__.py  loader.py  mutation.py  schema.py
tests/: test_chunker.py  test_pareto_frontier.py  test_reviewer_gate.py  test_sop_load.py  test_sop_mutation.py
