
[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-swe-system"
version = "0.1.0"
description = "Agentic SWE System (LangGraph + deterministic QA + DuckDB benchmarking)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"duckdb>=1.0",
	"faiss-cpu>=1.8",
	"gitpython>=3.1",
	"langchain>=0.3",
	"langchain-community>=0.3",
	"langgraph>=0.2",
	"networkx>=3.3",
	"numpy>=1.26",
	"ollama>=0.3",
	"pydantic>=2.7",
	"pylint>=3.2",
	"pytest>=8.0",
	"pytest-cov>=5.0",
	"pytest-json-report>=1.5",
	"pyyaml>=6.0",
	"radon>=6.0",
	"ruff>=0.5",
	"sentence-transformers>=3.0",
	"semver>=3.0",
	"tiktoken>=0.7",
]

[project.optional-dependencies]
dev = [
	"ipython>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-q"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
